fix overlaping component bug

--- a/client/src/Project_Card/Project_Card.css
+++ b/client/src/Project_Card/Project_Card.css
@@ -16,7 +16,7 @@
 }
 
 .project_card-featured {
-    min-height: 100%;
+    min-height: auto;
 }
 
 .project_card-header {
